--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -139,6 +139,7 @@
     "attorney": "Attorney",
     "enterEmail": "Enter email",
     "emailIncorrectFormat": "Enter email in the correct format, like name@example.com",
+    "enterMobile": "Enter mobile phone number",
     "attorneyAddress": "{{.FirstNames}} {{.LastName}}'s address",
     "attorneyDateOfBirthIsUnder18": "This attorney is under 18 years old. You will not be able to finish making this LPA until they are 18.",
 
@@ -190,6 +191,7 @@
     "certificateProviderDetails": "Your certificate provider’s details",
     "certificateProviderDetailsHint": "Remember, your certificate provider must be 18 or over. They cannot be a member of your family (this includes step-relations and in-laws) or of the attorneys' families.",
     "certificateProviderDobHint": "We need your certificate provider's date of birth to check they are over 18.",
+    "mobile": "Mobile number",
 
     "aboutPayment": "About payment",
     "aboutPaymentContent": "<p class=\"govuk-body\">It costs £82 to apply for an LPA. </p>",
@@ -260,19 +262,6 @@
     "thankYouHeader": "Thank you for your payment.",
     "paymentConfirmationContent": "<p class=\"govuk-body\">You have successfully paid for your finance and affairs LPA.</p><p class=\"govuk-body\">We've sent you an email to confirm we've received your LPA application fee.</p><p class=\"govuk-body\">If the email has not arrived in a few minutes, check your spam folder.</p>",
 
-    "whatHappensWhenSigning": "What happens when you sign the LPA",
-    "whatHappensWhenSigningContent": "<p class=\"govuk-body\">Signing the LPA is an important and powerful legal step.</p> <p class=\"govuk-body\"> When you do this you're officially saying that you want {{.AllAttorneysFullNames}} to be your finance and affairs attorney.</p> <p class=\"govuk-body\">This means that once the LPA has been registered, {{.AllAttorneysFirstNames}} will have the legal power to:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>help you make a decision about your money or property, or make a decision for you</li> <li>deal with organisations, like banks and utility companies, on your behalf</li> </ul>",
-    "whileYouHaveMentalCapacity": "While you have mental capacity, {{.AllAttorneysFirstNames}} can only do these things if you ask them to.",
-    "theyMustAlwaysFollowTheRules": "They must always follow the rules set out in the <a href=\"https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/921428/Mental-capacity-act-code-of-practice.pdf\">Mental Capacity Act and code of practice</a>, and the restrictions you made in your LPA.",
-    "whatHappensIfIChangeMyMind": "What happens if I change my mind about the LPA later?",
-    "whatHappensIfIChangeMyMindContent": "<p class=\"govuk-body\">If you confirm you want to make the LPA, but change your mind later, you can ask us to:</p> <ul class=\"govuk-list govuk-list--bullet\"> <li>stop the LPA's registration if it has not been registered yet</li> <li>cancel the LPA if it's already been registered</li> <li>remove an attorney from the LPA</li> </ul> <p class=\"govuk-body\">If you cancel the LPA, you can make a new one to replace it.</p> <p class=\"govuk-body\">You can only do these things if you still have mental capacity.</p>",
-    "registeringYourLpa": "Registering your LPA",
-    "registeringYourLpaContent": "<p class=\"govuk-body\">Once you have signed the LPA with {{.CertificateProviderFirstNames}} as your certificate provider, we'll ask {{.AllAttorneysFullNames}} to formally confirm they want to be your attorney. Then the LPA will be automatically sent to the OPG to be registered.</p> <p class=\"govuk-body\">This must all be done within 21 days of you signing the LPA. If this deadline is missed, you will have to sign the LPA and meet with {{.CertificateProviderFirstNames}} again.</p> <p class=\"govuk-body\">We will then check your LPA and register it. If there are any problems with the LPA that mean we cannot register it, we'll let you know.</p>",
-
-    "howToSign": "How to sign",
-    "howToSignContent": "<ol class=\"govuk-list govuk-list--number\"> <li>When you press continue, we will text you a signature code.</li> <li>Read your LPA carefully before you sign.</li> <li>Type your signature code to sign the LPA. Your witness, {{.CertificateProviderFirstNames}} must watch you do this.</li> <li>Declare that {{.CertificateProviderFirstNames}} was present when you signed.</li> </ol>",
-    "whenYouSignWarning": "{{.YouFirstNames}}, when you sign the LPA, {{.CertificateProviderFirstNames}} must be physically present to witness you sign.",
-
     "readYourLpa": "Read and sign your LPA",
     "readAndCheckYourLpa": "Read and check your LPA carefully before you sign it.",
     "whatHappensIfIWantToMakeChanges": "What happens if I want to make changes after I've signed?",
@@ -306,7 +295,9 @@
     "submitSignature": "Submit my signature",
     "selectBothBoxes": "You must check both boxes to confirm your signing of the LPA.",
 
-    "witnessingYourSignature": "Witnessing your signature",
+    "witnessYourSignatureHeader": "<h1 class=\"govuk-heading-xl\">Witnessing your signature</h1>",
+    "witnessYourSignatureContent": "<p class=\"govuk-body govuk-!-font-weight-bold\">We now need {{ .CpFullName }}, your certificate provider to confirm that they are with you and have witnessed you signing your LPA.</p> <ol class=\"govuk-list govuk-list--number govuk-list--spaced\"> <li>When you press continue, we'll send {{ .CpFirstNames }} a text message containing a unique code</li> <li>{{ .CpFirstNames }} will need to type in this code on the next screen</li> </ol>",
+    "witnessCodeTimeWarning": "When {{ .CpFirstNames }} receives this code, it is valid for 30 minutes. Please use the code within this time.",
 
     "selectYourIdentityOptions": "Select your identity options",
     "selectAllAtLeastThree": "Select all that apply. You must select at least three options.",
