e2e test fix and add mobile to CP details partial

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -280,6 +280,7 @@
     "idVerified": "Welsh",
     "address": "Cyfeiriad",
     "certificateProvider": "Darparwr tystysgrif",
+    "certificateProviderMobile": "Welsh",
     "certificateProviderEmail": "e-bost darparwr tystysgrif",
     "attorneys": "Atwrneiod",
     "iveCheckedThisLpa": "Rwyf wedi gwirio’r LPA hon ac nid wyf am wneud unrhyw newidiadau",
