Change help to support

--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -9,7 +9,7 @@
     "newServiceContent": "This is a new service – your <a class=\"govuk-link\" href=\"#\">feedback</a> will help us to improve it.",
     "urModeContent": "This is a prototype – this is not a real service.",
     "supportLinks": "Support links",
-    "help": "Help",
+    "help": "Support",
     "cookies": "Cookies",
     "contact": "Contact",
     "termsAndConditions": "Terms and conditions",
