--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -340,7 +340,7 @@
     "enterUniqueCodeHint": "{{ .CpFirstName }}, please type in the code we have sent you, to prove that you are with {{ .DonorFullName }} and have witnessed them sign their LPA.",
     "cpNotReceivedCodeLink": "<p class=\"govuk-body\"><a href=\"#\" class=\"govuk-link\">{{ .CpFirstName }} has not received a text message with the code</a></p>",
     "witnessCodeDoesNotMatch": "The code you entered is incorrect, please check it and try again",
-    "witnessCodeExpired": "The certificate providers one-time code entered has expired.",
+    "witnessCodeExpired": "The code you entered has expired",
     "enterWitnessCode": "Enter the code we sent to the certificate provider",
     "witnessCodeTooLong": "The code you entered is too long",
     "witnessCodeTooShort": "The code you entered is too short",
