--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -418,14 +418,13 @@
     "selectDoYouWantToNotifyPeople": "Select whether you want to notify anyone about your LPA",
     "wantPeopleToNotifyContent": "<p class=\"govuk-body\">You can choose to notify up to 5 people about your LPA. Most people choose family members or close friends. These people can raise any concerns before your LPA is registered.</p><p class=\"govuk-body\">We call these 'people to notify'. Having people to notify is optional.</p><p class=\"govuk-body\">If you choose to notify a person about your LPA, we'll send them information as soon as we have received and checked your application.</p>",
     "weWillOnlyTellThemBullets": "<p class=\"govuk-body\">We'll only tell them:</p><ul class=\"govuk-list govuk-list--bullet\"><li>that you’ve made a {{ .LpaType }} LPA</li><li>hat your attorneys are {{ .AllAttorneysFirstNames }}</li><li>that you want your attorneys to {{ .HowAttorneysWorkTogether }}</li><li>what to do if they have concerns</li></ul>",
-    "findOutMoreAboutPeopleToNotifyLink": "<p class=\"govuk-body\"><a href=\"#\">Find out more about people to notify (opens in a new tab).</a></p>",
+    "findOutMoreAboutPeopleToNotifyLink": "<p class=\"govuk-body\"><a href=\"#\" class=\"govuk-link\">Find out more about people to notify (opens in a new tab).</a></p>",
     "whoWouldYouLikeNotify": "Add a person to notify about your LPA",
     "personToNotifyAddress": "{{.FirstNames}} {{.LastName}}'s address",
-    "peopleToNotifyAdded": {
-        "one": "You have added {{.PluralCount}} person to notify",
-        "other": "You have added {{.PluralCount}} people to notify"
-    },
-    "removePersonToNotifyButtonLink": "Remove person to notify {{ .PersonNumber }}<span class=\"govuk-visually-hidden\"> {{ .FirstNames }} {{ .LastName }}</span>",
+    "peopleToNotifyHeader": "People to notify about your LPA",
+    "weCanNotifyUpTo5PeopleContent": "<p class=\"govuk-body\">We can notify up to 5 people about your LPA on your behalf.</p>",
+    "removePersonToNotifyButtonLink": "Remove {{ .FirstNames }} {{ .LastName }}",
     "doYouWantToAddAnotherPersonToNotify": "Do you want to add another person to notify?",
-    "removeAPersonToNotify": "Remove a person to notify"
+    "removeAPersonToNotify": "Remove a person to notify",
+    "addedMaxPeople": "You've now added the maximum number of people we can notify about your LPA. If you want to add someone else, you must remove a person you’ve already added."
 }
