--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -446,20 +446,22 @@
     "when-registered": "Cyn gynted ag y bydd wedi'i gofrestru",
     "when-capacity-lost": "Dim ond pan nad oes gennyf alluedd meddyliol",
 
-    "peopleToNotify": "Pobl i hysbysu",
+    "peopleToNotify": "Welsh",
     "wantPeopleToNotify": "Ydych chi eisiau hysbysu unrhyw un am eich LPA?",
     "selectDoYouWantToNotifyPeople": "Dewiswch a ydych am hysbysu unrhyw un am eich LPA",
     "wantPeopleToNotifyContent": "<p class=\"govuk-body-l\">Cynnwys am bobl i'w hysbysu</p>",
+    "weWillOnlyTellThemBullets": "<p class=\"govuk-body\">Welsh:</p><ul class=\"govuk-list govuk-list--bullet\"><li>Welsh {{ .LpaType }} welsh</li><li>welsh {{ .AllAttorneysFirstNames }}</li><li>welsh {{ .HowAttorneysWorkTogether }}</li><li>welsh</li></ul>",
+    "findOutMoreAboutPeopleToNotifyLink": "<p class=\"govuk-body\"><a href=\"#\" class=\"govuk-link\">Welsh</a></p>",
     "whoWouldYouLikeNotify": "Ychwanegwch berson i'w hysbysu am eich LPA",
     "personToNotifyAddress": "Cyfeiriad {{.FirstNames}} {{.LastName}}",
-    "peopleToNotifyAdded": {
-        "one": "Rydych wedi ychwanegu {{.PluralCount}} person i hysbysu",
-        "two": "Rydych chi wedi ychwanegu {{.PluralCount}} o bobl i'w hysbysu",
-        "few": "Rydych chi wedi ychwanegu {{.PluralCount}} o bobl i'w hysbysu",
-        "many": "Rydych chi wedi ychwanegu {{.PluralCount}} o bobl i'w hysbysu",
-        "other": "Rydych chi wedi ychwanegu {{.PluralCount}} o bobl i'w hysbysu"
-    },
-    "removePersonToNotifyButtonLink": "Welsh {{ .PersonNumber }}<span class=\"govuk-visually-hidden\"> {{ .FirstNames }} {{ .LastName }}</span>",
+    "removePersonToNotifyButtonLink": "Welsh {{ .FirstNames }} {{ .LastName }}</span>",
     "doYouWantToAddAnotherPersonToNotify": "Ydych chi am ychwanegu person arall i'w hysbysu?",
-    "removeAPersonToNotify": "Dileu person i'w hysbysu"
+    "weCanNotifyUpTo5PeopleContent": "<p class=\"govuk-body\">Welsh</p>",
+    "addedMaxPeople": "Welsh",
+    "selectRemovePersonToNotify": "Welsh",
+    "selectAddMorePeopleToNotify": "Welsh",
+    "enterTheirFirstNames": "Welsh",
+    "enterTheirLastName": "Welsh",
+    "enterTheirEmail": "Welsh",
+    "theirEmailIncorrectFormat": "Welsh"
 }
