--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -297,7 +297,7 @@
     "readMoreDigitalSignatures": "Read more about digital signatures",
     "readMoreDigitalSignaturesContent": "User-friendly content to increase confidence in digital signatures.",
     "submitSignature": "Submit my signature",
-    "selectBothBoxes": "You must check both boxes to sign your LPA",
+    "selectBothBoxes": "You must select both boxes to sign your LPA",
 
     "witnessYourSignatureHeader": "<h1 class=\"govuk-heading-xl\">Witnessing your signature</h1>",
     "witnessYourSignatureContent": "<p class=\"govuk-body govuk-!-font-weight-bold\">We now need {{ .CpFullName }}, your certificate provider to confirm that they are with you and have witnessed you signing your LPA.</p> <ol class=\"govuk-list govuk-list--number govuk-list--spaced\"> <li>When you press continue, we'll send {{ .CpFirstNames }} a text message containing a unique code</li> <li>{{ .CpFirstNames }} will need to type in this code on the next screen</li> </ol>",
