Remove english from welsh

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -220,7 +220,7 @@
     "enterCertificateProviderFirstNames":"Welsh",
     "enterCertificateProviderDateOfBirth": "Welsh",
     "enterCertificateProviderLastName":"Welsh",
-    "enterUkMobile": "Enter a valid mobile number, like 07700 900 982 or +44 7700 900 982",
+    "enterUkMobile": "Welsh",
     "dateOfBirthMonth": "Welsh",
     "dateOfBirthYear":"Welsh",
     "dateOfBirthDay": "Welsh",
