MLPAB-535: Updates to CP details (#264)

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -213,8 +213,17 @@
 
     "certificateProviderDetails": "Manylion eich darparwr tystysgrif",
     "certificateProviderDetailsHint": "Cofiwch, rhaid i’ch darparwr tystysgrif fod yn 18 oed neu'n hŷn. Ni allant fod yn aelod o'ch teulu (mae hyn yn cynnwys llys-berthnasau a pherthnasau yng-nghyfraith) nac o deuluoedd eich atwrneiod.",
-    "certificateProviderDobHint": "Mae angen dyddiad geni eich darparwr tystysgrif arnom i wirio eu bod dros 18 oed.",
+    "certificateProviderDobContext": "Mae angen dyddiad geni eich darparwr tystysgrif arnom i wirio eu bod dros 18 oed.",
+    "certificateProviderMobileContext": "Welsh",
     "mobile": "Welsh",
+    "enterCertificateProviderMobile":"Welsh",
+    "enterCertificateProviderFirstNames":"Welsh",
+    "enterCertificateProviderDateOfBirth": "Welsh",
+    "enterCertificateProviderLastName":"Welsh",
+    "enterUkMobile": "Welsh",
+    "dateOfBirthMonth": "Welsh",
+    "dateOfBirthYear":"Welsh",
+    "dateOfBirthDay": "Welsh",
 
     "howWouldCertificateProviderPreferToCarryOutTheirRole": "{{.FirstNames}} Welsh",
     "selectHowWouldCertificateProviderPreferToCarryOutTheirRole": "Welsh",
@@ -288,6 +297,7 @@
     "idVerified": "Welsh",
     "address": "Cyfeiriad",
     "certificateProvider": "Darparwr tystysgrif",
+    "certificateProviderMobile": "Welsh",
     "certificateProviderEmail": "e-bost darparwr tystysgrif",
     "attorneys": "Atwrneiod",
     "iveCheckedThisLpa": "Rwyf wedi gwirio’r LPA hon ac nid wyf am wneud unrhyw newidiadau",
