--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -194,8 +194,17 @@
 
     "certificateProviderDetails": "Your certificate provider’s details",
     "certificateProviderDetailsHint": "Remember, your certificate provider must be 18 or over. They cannot be a member of your family (this includes step-relations and in-laws) or of the attorneys' families.",
-    "certificateProviderDobHint": "We need your certificate provider's date of birth to check they are over 18.",
+    "certificateProviderDobContext": "We need your certificate provider's date of birth to check they are over 18.",
+    "certificateProviderMobileContext": "We need your certificate provider's mobile number so we can send them a code to use when they witness you signing your LPA.",
     "mobile": "Mobile number",
+    "enterCertificateProviderFirstNames": "Enter your certificate provider's first name",
+    "enterCertificateProviderLastName": "Enter your certificate provider's last name",
+    "enterCertificateProviderDateOfBirth": "Enter your certificate provider's date of birth",
+    "enterCertificateProviderMobile": "Enter your certificate provider's mobile number",
+    "enterUkMobile": "Enter a valid mobile number, like 07700 900 982 or +44 7700 900 982",
+    "dateOfBirthDay": "Enter a day",
+    "dateOfBirthMonth": "Enter a month",
+    "dateOfBirthYear": "Enter a year",
 
     "howWouldCertificateProviderPreferToCarryOutTheirRole": "How would {{.FirstNames}} prefer to carry out their role?",
     "selectHowWouldCertificateProviderPreferToCarryOutTheirRole": "Select how your certificate provider would prefer to carry out their role",
@@ -262,6 +271,7 @@
     "idVerified": "id verified",
     "address": "Address",
     "certificateProvider": "Certificate provider",
+    "certificateProviderMobile": "certificate provider mobile",
     "certificateProviderEmail": "certificate provider email",
     "attorneys": "Attorneys",
     "iveCheckedThisLpa": "I’ve checked this LPA and do not want to make any changes",
