dynamically add description of how attorneys work together

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -451,7 +451,10 @@
     "wantPeopleToNotify": "Ydych chi eisiau hysbysu unrhyw un am eich LPA?",
     "selectDoYouWantToNotifyPeople": "Dewiswch a ydych am hysbysu unrhyw un am eich LPA",
     "wantPeopleToNotifyContent": "<p class=\"govuk-body-l\">Cynnwys am bobl i'w hysbysu</p>",
-    "weWillOnlyTellThemBullets": "<p class=\"govuk-body\">Welsh:</p><ul class=\"govuk-list govuk-list--bullet\"><li>Welsh {{ .LpaType }} welsh</li><li>welsh {{ .AllAttorneysFirstNames }}</li><li>welsh {{ .HowAttorneysWorkTogether }}</li><li>welsh</li></ul>",
+    "weWillOnlyTellThemBullets": "<p class=\"govuk-body\">Welsh:</p><ul class=\"govuk-list govuk-list--bullet\"><li>Welsh {{ .LpaType }} welsh</li><li>welsh {{ .AllAttorneysFirstNames }}</li><li>{{ .HowAttorneysWorkTogether }}</li><li>welsh</li></ul>",
+    "jointlyDescription": "welsh",
+    "jointlyAndSeverallyDescription": "welsh",
+    "jointlyForSomeSeverallyForOthersDescription": "welsh",
     "findOutMoreAboutPeopleToNotifyLink": "<p class=\"govuk-body\"><a href=\"#\" class=\"govuk-link\">Welsh</a></p>",
     "whoWouldYouLikeNotify": "Ychwanegwch berson i'w hysbysu am eich LPA",
     "personToNotifyAddress": "Cyfeiriad {{.FirstNames}} {{.LastName}}",
