--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -55,6 +55,7 @@
     "findAddress": "Find address",
     "selectAnAddress": "Select an address",
     "cantFindAddress": "Can not find address?",
+    "cantFindTheirAddress": "I can’t find their address in the list",
     "addressesFound": {
         "one": "{{.PluralCount}} address found",
         "other": "{{.PluralCount}} addresses found"
@@ -432,18 +433,27 @@
     "when-registered":       "As soon as it's registered",
     "when-capacity-lost":    "Only when I do not have mental capacity",
 
-    "peopleToNotify": "People to notify",
+    "peopleToNotify": "People to notify about your LPA",
     "wantPeopleToNotify": "Do you want to notify anyone about your LPA?",
     "selectDoYouWantToNotifyPeople": "Select whether you want to notify anyone about your LPA",
-    "wantPeopleToNotifyContent": "<p class=\"govuk-body-l\">Some content about people to notify</p>",
+    "wantPeopleToNotifyContent": "<p class=\"govuk-body\">You can choose to notify up to 5 people about your LPA. Most people choose family members or close friends. These people can raise any concerns before your LPA is registered.</p><p class=\"govuk-body\">We call these 'people to notify'. Having people to notify is optional.</p><p class=\"govuk-body\">If you choose to notify a person about your LPA, we'll send them information as soon as we have received and checked your application.</p>",
+    "weWillOnlyTellThemBullets": "<p class=\"govuk-body\">We'll only tell them:</p><ul class=\"govuk-list govuk-list--bullet\"><li>that you’ve made a {{ .LpaType }} LPA</li><li>that your attorneys are {{ .AllAttorneysFirstNames }}</li><li>{{ .HowAttorneysWorkTogether }}</li><li>what to do if they have concerns</li></ul>",
+    "jointlyDescription": "that you want your attorneys to work together to make decisions",
+    "jointlyAndSeverallyDescription": "that you want your attorneys to work together or separately to make decisions",
+    "jointlyForSomeSeverallyForOthersDescription": "that you want your attorneys to work together on some decisions but can make other decisions separately",
+    "findOutMoreAboutPeopleToNotifyLink": "<p class=\"govuk-body\"><a href=\"#\" class=\"govuk-link\">Find out more about people to notify (opens in a new tab).</a></p>",
     "whoWouldYouLikeNotify": "Add a person to notify about your LPA",
     "personToNotifyAddress": "{{.FirstNames}} {{.LastName}}'s address",
-    "peopleToNotifyAdded": {
-        "one": "You have added {{.PluralCount}} person to notify",
-        "other": "You have added {{.PluralCount}} people to notify"
-    },
-    "removePersonToNotifyButtonLink": "Remove person to notify {{ .PersonNumber }}<span class=\"govuk-visually-hidden\"> {{ .FirstNames }} {{ .LastName }}</span>",
+    "weCanNotifyUpTo5PeopleContent": "<p class=\"govuk-body\">We can notify up to 5 people about your LPA on your behalf.</p>",
+    "removePersonToNotifyButtonLink": "Remove {{ .FirstNames }} {{ .LastName }}",
     "doYouWantToAddAnotherPersonToNotify": "Do you want to add another person to notify?",
+    "addedMaxPeople": "You've now added the maximum number of people we can notify about your LPA. If you want to add someone else, you must remove a person you’ve already added.",
+    "selectRemovePersonToNotify": "Select yes if you want to remove this person",
+    "selectAddMorePeopleToNotify": "Select yes if you want to add another person to notify",
+    "enterTheirFirstNames": "Enter their first names",
+    "enterTheirLastName": "Enter their last name",
+    "enterTheirEmail": "Enter their last name",
+    "theirEmailIncorrectFormat": "Enter their email address in the correct format, like name@example.com",
     "removeAPersonToNotify": "Remove a person to notify",
 
     "howToConfirmYourIdentityAndSign": "How to confirm your identity and sign the LPA",
